--- a/_data/apis.yaml
+++ b/_data/apis.yaml
@@ -29,6 +29,8 @@
       url: api-commons/openapi-spec.json
     - type: x-json-schema
       url: api-commons/schema.json
+    - type: x-api-filters
+      url: api-commons/api-filter.json
   x-common:
   - type: x-authentication-overview
     url: authentication/
